--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faraujo/loop-design-system": "^1.0.4",
+    "gh-pages": "^3.1.0",
+    "styled-components": "^5.2.1"
   }
 }
